# ai-model-from-scratch

./: .gitignore  CLAUDE.md  GUIDE.md  PLAN.md  PRETRAIN.md  pyproject.toml
phase1_foundations/: 01_neural_network.ipynb  02_backpropagation.ipynb  03_attention.ipynb  04_modern_components.ipynb
phase2_tokenizer/: bpe_tokenizer.py  train_tokenizer.py
phase2_tokenizer/vocab/: merges.txt  vocab.json
phase3_transformer/: attention.py  block.py  config.py  feedforward.py  model.py  rmsnorm.py  rope.py
phase4_training/: dataset.py  lr_schedule.py  train.py  trainer.py
phase4_training/configs/: small.yaml  tiny.yaml
phase5_generation/: evaluate.py  generate.py  interactive.py  kv_cache.py
phase6_finetune/: clean_model.py  convert_to_mlx.py  download_model.py  dpo.py  finetune.py  instruction_dataset.py  lora.py  quantize.py  reconstruct_model.py
phase7_agent/: agent.py  cli.py  function_calling.py  memory.py
phase7_agent/tools/: base.py  code_executor.py  file_ops.py  shell.py
tests/: test_agent.py  test_finetune.py  test_generation.py  test_phase1.py  test_tokenizer.py  test_training.py  test_transformer.py
